# hdf5_metadataindex

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  attributes.cc  attributes.h  conditions.h  h5helpers.cc  h5helpers.h  indexHdf5.cc  indexHdf5.h  indexer.cc  jsonToValue.h  postselection.cc  postselection.h  queryDb.cc  sqliteHelpers.cc  sqliteHelpers.h  writeToSQLite.cc
cmake/Modules/: FindJsonCpp.cmake  FindSQLite3.cmake
src/: CMakeLists.txt  attributes.cc  attributes.h  conditions.h  filehelpers.cc  filehelpers.h  h5helpers.cc  h5helpers.h  hdf5ReaderGeneric.cc  hdf5ReaderGeneric.h  indexHdf5.cc  indexHdf5.h  indexer.cc  jsonToValue.cc  jsonToValue.h  mdi.cc  parseJson.cc  parseJson.h  postselection.cc  postselection.h  queryDb.cc  readHdf5.cc  readTable.cc  readTable.h  sqliteHelpers.cc  sqliteHelpers.h  tests.cc  value.cc  value.h
testdata/: table_testdata.h5
